<resources>
    <string name="app_name">moneymanagement3</string>
    <string name="title_budget">Budget</string>
    <string name="title_chart">Chart</string>
    <string name="title_home">Add</string>
    <string name="title_setting">Setting</string>
    <string name="title_spending">Spending</string>
    <string name="name">Name</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="chart_fragment">chart_fragment</string>
    <string name="budget_fragment">budget fragment</string>
    <string name="tracker_fragment">tracker fragment</string>
    <string name="setting_fragment">setting fragment</string>
    <string name="tracker">tracker</string>
    <string name="description">description</string>
    <string name="add">add</string>
    <string name="next_page">next_page</string>
    <string name="amount">amount</string>
    <string name="settings">settings</string>
    <string name="select_category">Select Category</string>
    <string name="new_category">New Category</string>
    <string name="_0_00">$-0.00</string>
    <string name="reset_all">Reset all</string>
    <string name="edit_amount">Edit Amount</string>
    <string name="edit_description">Edit Description</string>
    <string name="reset_categories">Reset Categories</string>
    <string name="Amount">Amount</string>
    <string name="Description">Description</string>
    <string name="edit_date">Edit Date</string>
    <string name="reset_all_categories">Reset All Categories</string>
    <string name="Settings">Settings</string>
    <string name="categories_to_delete">Categories to Delete</string>
    <string name="delete_all_categories">Delete All Categories</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="go_back">Go Back</string>
    <string name="textview">TextView</string>
    <string name="dollar_amount">$ Amount</string>
    <string name="manage_cycles">Manage Cycles</string>
    <string name="outof0_00">/$0.00</string>
    <string name="difference_0_00">Difference: $0.00</string>
    <string name="plus0_00">+$0.00</string>
    <string name="set_budget">Set Budget</string>
    <string name="manage_budget">Manage Budget</string>
    <string name="budget">budget</string>
    <string name="e_g_groceries">e.g. Groceries</string>
    <string name="by_category">By Category:</string>
    <string name="date">Date</string>
    <string name="to_pie_chart">To Pie Chart</string>
    <string name="to_line_chart">To Line Chart</string>
    <string name="to_bar_chart">To Bar Chart</string>
    <string name="to_info_chart">To Info Chart</string>
    <string name="payment_type">Payment Type</string>
    <string name="amount_req">Amount*</string>
    <string name="description_opt">(Description)</string>
    <string name="payment_type_opt">(Payment Type)</string>
    <string name="debit">Debit:</string>
    <string name="credit">Credit:</string>
    <string name="cash">Cash:</string>
    <string name="check">Check:</string>
    <string name="_0_00_dollar">$0.00</string>
    <string name="dates">Dates</string>
    <string name="select_dates">Select Dates</string>
    <string name="choose_to_show">Choose to Show</string>
    <string name="category">Category</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="to_low">to</string>
    <string name="charts_and_data">Charts and Data</string>
    <string name="categories">Categories</string>
    <string name="custom_data">Custom Data</string>
    <string name="payment_types">Payment Types</string>
    <string name="data_over_time">Data Over Time</string>
    <string name="example_emoji_groceries">Example: (emoji) Groceries</string>
    <string name="current_cycle">Current Cycle</string>
    <string name="cycles">Cycles</string>
    <string name="custom_dates">Custom Dates</string>
    <string name="export">Export</string>
    <string name="paymenttype">Payment Type</string>
    <string name="Notice">Notice</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="info">info</string>
</resources>