<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chart"
        android:icon="@drawable/ic_pie_chart_24px"
        android:title="@string/title_chart" />
    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/title_budget" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_add_24px"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/ic_calendar_today_24px"
        android:title="@string/tracker" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/title_setting" />

</menu>