<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moneymanagement3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.moneymanagement3.ui.budget.BudgetFragment"
        android:label="@string/title_budget" />
    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.moneymanagement3.ui.chart.ChartFragment"
        android:label="@string/title_chart" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.moneymanagement3.ui.setting.SettingFragment"
        android:label="@string/title_setting" />
    <fragment
        android:id="@+id/trackerFragment"
        android:name="com.example.moneymanagement3.ui.tracker.TrackerFragment"
        android:label="TrackerFragment" />

</navigation>