<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="37">

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="6dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/Description"
            android:textColor="#3A3737"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="5dp"
            android:text="@string/category" />
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="63">

        <TextView
            android:id="@+id/entry_amountTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="4dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:text="@string/Amount"
            android:textColor="#BC1E2C"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingBottom="5dp"
            android:text="@string/date" />
    </LinearLayout>

</LinearLayout>