<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    app:layout_constraintVertical_bias="0.023"   (spinner)  -->
<!--    app:layout_constraintHorizontal_bias="0.843"-->


    <TextView
        android:id="@+id/customDatesTv"
        android:layout_width="349dp"
        android:layout_height="34dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dates"
        android:textAlignment="center"
        android:textColor="#4B5544"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/debit_decal_Tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/setDatesBtn"
        android:layout_width="199dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_drawable"
        android:fontFamily="sans-serif-black"
        android:stateListAnimator="@animator/button_state_list_anim"
        android:text="@string/select_dates"
        android:textColor="#F3F8F0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gobackBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/debit_decal_Tv"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@drawable/decal3"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/debit"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224" />

    <TextView
        android:id="@+id/check_decal_Tv"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/decal3"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/check"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/debit_decal_Tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/debit_decal_Tv"
        app:layout_constraintTop_toBottomOf="@+id/cash_decal_Tv" />


    <TextView
        android:id="@+id/cash_decal_Tv"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/decal3"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/cash"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/debit_decal_Tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/debit_decal_Tv"
        app:layout_constraintTop_toBottomOf="@+id/credit_decal_Tv" />


    <TextView
        android:id="@+id/credit_decal_Tv"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/decal3"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/credit"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/debit_decal_Tv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/debit_decal_Tv"
        app:layout_constraintTop_toBottomOf="@+id/debit_decal_Tv" />

    <Button
        android:id="@+id/gobackBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/back_arrow"
        android:stateListAnimator="@animator/button_state_list_anim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/debitTv"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:text="@string/_0_00_dollar"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/debit_decal_Tv"
        app:layout_constraintEnd_toEndOf="@+id/debit_decal_Tv"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="@+id/debit_decal_Tv"
        app:layout_constraintTop_toTopOf="@+id/debit_decal_Tv"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/creditTv"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:text="@string/_0_00_dollar"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/credit_decal_Tv"
        app:layout_constraintEnd_toEndOf="@+id/credit_decal_Tv"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="@+id/credit_decal_Tv"
        app:layout_constraintTop_toTopOf="@+id/credit_decal_Tv"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/cashTv"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:text="@string/_0_00_dollar"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cash_decal_Tv"
        app:layout_constraintEnd_toEndOf="@+id/cash_decal_Tv"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="@+id/cash_decal_Tv"
        app:layout_constraintTop_toTopOf="@+id/cash_decal_Tv"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/checkTv"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:text="@string/_0_00_dollar"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/check_decal_Tv"
        app:layout_constraintEnd_toEndOf="@+id/check_decal_Tv"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="@+id/check_decal_Tv"
        app:layout_constraintTop_toTopOf="@+id/check_decal_Tv"
        app:layout_constraintVertical_bias="0.529" />


</androidx.constraintlayout.widget.ConstraintLayout>